--- a/index.html
+++ b/index.html
@@ -2957,7 +2957,11 @@
         correctAnswer: "A"
       }
     ];
-
+    
+        // ...
+        
+        renderCategoryOptions();
+        renderQuestions();
     </script>
     </body>
 </html>
